--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="jquery.timeago.js" type="text/javascript"></script>
   </head>
   <body>
     <button type="button" id="newTweets">New Tweets</button>
