--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Twittler</title>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
-    <link rel="stylesheet" href="styles.css">
     <script src="jquery.timeago.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <button type="button" id="newTweets">New Tweets</button>
+    <h1>Twittler</h1>
+    <button type="button" id="newTweets">New Twits</button>
     <div id="tweetList"></div>
+    <textarea class="textArea" rows="1" cols="30"></textarea>
+    <button type="button" class="guestTweetButton">Try it</button>
     <script src="twittler.js"></script>
   </body>
 </html>
-
