Added function: visitors can now post twits using the @visitor handle. Also supports an @visitor twit stream. But code is messy -- needs to be cleaned and refactored!

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <h1>Twittler</h1>
-    <button type="button" id="newTweets">New Twits</button>
+    <button type="button" id="newTweets">Update Feed</button>
     <div id="tweetList"></div>
     <textarea class="textArea" rows="1" cols="30"></textarea>
-    <button type="button" class="guestTweetButton">Try it</button>
+    <button type="button" class="guestTweetButton">New Twit</button>
     <script src="twittler.js"></script>
   </body>
 </html>
